remove reduncdant code
