# route/setups.js
@@ -1,8 +1,9 @@
 import setupController from "../controllers/setupController";
 import { checkSchema, validationResult } from 'express-validator';
-import { setup, setupDelete, setupGet } from "../schema/setup";
+import setup  from "../schema/setup";
 
 const router = (router) => {
+
     router.post("/setup", checkSchema(setup()), async (req, res) => {
         const errors = validationResult(req);
 
@@ -41,14 +42,14 @@ const router = (router) => {
         res.status(reply.status).send(reply);
     });
 
-    router.delete("/setup", checkSchema(setupDelete()), async (req, res) => {
-        const errors = validationResult(req);
-
-        if (!errors.isEmpty()) {
-            return res.status(400).json({ errors: errors.array() });
+    router.delete("/:phone_no/setup",  async (req, res) => {
+        if (!req.params.phone_no) {
+            return res.status(400).json({ errors: "phone number is required" });
         }
 
-        let setup = new setupController(req.body)
+        console.log(req.params.phone_no)
+
+        let setup = new setupController({phone_no: req.params.phone_no})
         let reply = await setup.deleteConfig();
 
         res.status(reply.status).send(reply);
